apps/ecran/kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecran
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
