apps/ecran/kustomize/ecran-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ecran
  name: ecran
  namespace: ecran
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ecran
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ecran
    spec:
      imagePullSecrets:
        - name: proompteng-registry
      containers:
        - name: ecran
          image: gitea.proompteng.ai/lab/ecran:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: '1'
              memory: '1Gi'
            requests:
              cpu: '100m'
              memory: '100Mi'
