apps/ecran/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecran
  namespace: ecran
spec:
  selector:
    app.kubernetes.io/name: ecran
  ports:
  - name: http
    port: 80
    targetPort: 3000
